namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: gracedb-test
  labels:
    name: gracedb-test
spec: {}
status: {}
