deployment-ha.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gracedb-test-ha
  namespace: gracedb-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gracedb-test-ha
  template:
    metadata:
      labels:
        app: gracedb-test-ha
    spec:
      hostname: gracedb-test-ha
      containers:
        - name: gracedb-test-ha
          #image: containers.ligo.org/lscsoft/gracedb:docker
          image: containers.ligo.org/lscsoft/gracedb:gracedb-2.9.0-1
          #image: svallero/gracedb   
          imagePullPolicy: Always                                   
          volumeMounts:                                            
            - name: lvalert-no-certificate
              mountPath: /usr/local/lib/python3.5/dist-packages/ligo/lvalert/__init__.py
              subPath: __init__.py
            - name: django-settings                                
              mountPath: /app/gracedb_project/config/settings/container/cnaf_test.py
              subPath: cnaf_test.py                                
            - name: cinder-gracedb-ha                              
              mountPath: "/app/db_data"            
          livenessProbe:
            httpGet:
              path: /heartbeat/
              port: 80
              httpHeaders:
                - name: Host
                  value: gracedb-test-ha
            failureThreshold: 2
            initialDelaySeconds: 1000                             
            periodSeconds: 10                                     
          readinessProbe:                                         
            httpGet:                                              
              path: /heartbeat/                                   
              port: 80                                            
              httpHeaders:                                        
                - name: Host                                      
                  value: gracedb-test-ha
            initialDelaySeconds: 5                                
            periodSeconds: 5         
      volumes:                                                     
        - name: lvalert-no-certificate                                           
          configMap:                                               
              name: lvalert-no-certificate
        - name: django-settings                                    
          configMap:                                               
              name: django-settings-cnaf-test                      
        - name: cinder-gracedb-ha                                  
          persistentVolumeClaim:                                   
            claimName: cinder-gracedb-test-ha
