deployment-login.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gracedb-test-login
  namespace: gracedb-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gracedb-test-login
  template:
    metadata:
      labels:
        app: gracedb-test-login
    spec:
      hostname: gracedb-test-login
      containers:
        - name: gracedb-test-login
          image: containers.ligo.org/lscsoft/gracedb:docker
          #image: containers.ligo.org/lscsoft/gracedb:gracedb-2.9.1 
          #image: svallero/gracedb   
          imagePullPolicy: Always                                   
          volumeMounts:                                            
            - name: django-settings                                
              mountPath: /app/gracedb_project/config/settings/container/cnaf_test.py
              subPath: cnaf_test.py                                
            - name: cinder-gracedb                              
              mountPath: "/app/db_data"            
          livenessProbe:
            httpGet:
              path: /heartbeat/
              port: 80
              httpHeaders:
                - name: Host
                  value: gracedb-test
            failureThreshold: 2
            initialDelaySeconds: 1000                             
            periodSeconds: 10                                     
          readinessProbe:                                         
            httpGet:                                              
              path: /heartbeat/                                   
              port: 80                                            
              httpHeaders:                                        
                - name: Host                                      
                  value: gracedb-test
            initialDelaySeconds: 5                                
            periodSeconds: 5         
      volumes:                                                     
        - name: django-settings                                    
          configMap:                                               
              name: django-settings-cnaf-test                      
        - name: cinder-gracedb                                  
          persistentVolumeClaim:                                   
            claimName: cinder-gracedb-test
