mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-gdb-test
  namespace: gracedb-test
spec:
  ports:
  - port: 3306
  selector:
    app: mysql-gdb-test
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-gdb-test
  namespace: gracedb-test
spec:
  selector:
    matchLabels:
      app: mysql-gdb-test
  strategy:
    type: Recreate
  template:                                                       
    metadata:                                                     
      labels:                                                     
        app: mysql-gdb-test                                                
    spec:                                                         
      containers:                                                 
      - image: mariadb:10.5.1                                     
        name: mysql-gdb-test                                               
        #command: 
        #  - sh
        #  - -c
        #  - |
        #    rm -rf /var/lib/mysql/*
        ports:                    
        - containerPort: 3306                                     
          name: mysql-gdb-test                                             
        volumeMounts:                                             
        - name: mysql-persistent-storage                          
          mountPath: /var/lib/mysql                               
      volumes:                                                    
      - name: mysql-persistent-storage                            
        persistentVolumeClaim:                                    
          claimName: gracedb-test-mysql-pvc
